--- a/language/locales/en.json
+++ b/language/locales/en.json
@@ -1,31 +1,71 @@
 {
-  "NodeVersion": "Your Node.js version is too old. Please update: https://nodejs.org/en",
-  "InvalidStatusCode": "Invalid response. Status code:",
-  "LatestVersion": "Latest version:",
-  "OutOfDate": "The project is out of date.",
-  "UptoDate": "The project is up to date.",
-  "GithubApiError": "GitHub API error:",
-  "HttpGetError": "HTTP GET error:",
-  "Error": "Error:",
-  "CommandError:": "Command error:",
-  "MissingUsername": "Default folders are missing because the username is not set.",
-  "ErrorFolder": "Error occurred while fetching default folders.",
-  "ErrorUsername": "Failed to retrieve the username using the echo command.",
-  "ErrorUsernameSimple": "Error occurred while retrieving the username:",
-  "FolderDoesNotExist": "Folder does not exist: ${folderPath}",
-  "FileDoesNotExist": "File does not exist: ${filePath}",
-  "FilesIn": "Files in ${folderPath}:",
-  "FilesDeletedSuccesfully": "File successfully deleted: ${filePath}",
-  "OpenedSuccessfully": "${toolDisplayName} opened successfully.",
-  "ErrorOpening": "${toolDisplayName} could not be opened.",
-  "FileCreatedAndContentWritten": "File created and content written: ${filePath}",
-  "AnErrorOccurred": "An error occurred:",
-  "ErrorWhileOpeningTools": "Error occurred while opening tools:",
-  "DeletingFilesInFolder": "Deleting files in ${folder}:",
-  "ThereAreNoFilesIn": "There are no files to delete in ${folder}",
-  "ErrorHandlingFolder": "Error handling ${folder} folder:",
-  "InformationLog": "From file ${files}: ${totalFilesDeleted} files detected, ${successfulDeletions} files deleted, ${unsuccessfulDeletions} files not deleted.",
-  "SpotifyInformation": "You can enter the Spotify application, go to the \"Settings\" section and clear it from the \"Clear Cache\" option, you can also delete \"Downloads\" from the same section.",
-  "Version": "Your version: V${version} | Latest Version: ${latestVersion}",
-  "Links": "Links;"
+  "NodeVersion": "Node.js sürümünüz çok eski. Lütfen güncelleyin: https://nodejs.org/en",
+  "InvalidStatusCode": "Geçersiz yanıt. Durum kodu:",
+  "LatestVersion": "En son sürüm:",
+  "OutOfDate": "Proje güncel değil.",
+  "UptoDate": "Proje güncel.",
+  "GithubApiError": "GitHub API hatası:",
+  "HttpGetError": "HTTP GET hatası:",
+  "Error": "Hata:",
+  "CommandError": "Komut hatası:",
+  "MissingUsername": "Kullanıcı adı ayarlanmadığı için varsayılan klasörler eksik.",
+  "ErrorFolder": "Varsayılan klasörler getirilirken hata oluştu.",
+  "ErrorUsername": "Kullanıcı adını almak için kullanılan echo komutu başarısız oldu.",
+  "ErrorUsernameSimple": "Kullanıcı adı alınırken hata oluştu:",
+  "FolderDoesNotExist": "Klasör mevcut değil: ${folderPath}",
+  "FileDoesNotExist": "Dosya mevcut değil: ${filePath}",
+  "FilesIn": "${folderPath} içindeki dosyalar",
+  "FilesDeletedSuccesfully": "Dosya başarıyla silindi: ${filePath}",
+  "OpenedSuccessfully": "${toolDisplayName} başarıyla açıldı.",
+  "ErrorOpening": "${toolDisplayName} açılmıyor.",
+  "FileCreatedAndContentWritten": "Dosya oluşturuldu ve içerik yazıldı: ${filePath}",
+  "AnErrorOccurred": "Bir hata oluştu:",
+  "ErrorWhileOpeningTools": "Araçlar açılırken hata oluştu:",
+  "DeletingFilesInFolder": "${folder} içindeki dosyaları silme",
+  "ThereAreNoFilesIn": "${folder} içinde silinecek dosya yok.",
+  "ErrorHandlingFolder": "Hata ${folder} klasörünü işlerken oluştu:",
+  "InformationLog": "${files} Dosyadan: ${totalFilesDeleted} dosyaları tespit edildi, ${successfulDeletions} dosya silindi, ${unsuccessfulDeletions} dosya silinemedi.",
+  "SpotifyInformation": "Spotify uygulamasına girip \"Ayarlar\" bölümüne gidip \"Önbelleği Temizle\" seçeneğinden temizleyebilirsiniz, aynı bölümden \"İndirilenler\"i de silebilirsiniz",
+  "Version": "Senin versiyonun: V${version} | En son versiyon: ${latestVersion}",
+  "Links": "Linkler;",
+  "formTitle": "SASPClean",
+  "runButton": "Çalıştır",
+  "checkDisk": "Diski Kontrol Et - Bu komut diski hatalar için inceler ve bulduğu sorunları otomatik olarak giderir ve onarır.",
+  "clearWindowsUpdate": "Windows Güncellemelerini Temizle - Bu komut gereksiz dosyaları kaldırmak ve Windows bileşen deposunu optimize etmek için tasarlanmıştır, sistemde depolama alanını boşaltmaya yardımcı olur.",
+  "diskCleaner": "Disk Temizleyici - Dahili Disk Temizleme aracını açar ve gereksiz dosyaları kaldırarak disk alanını boşaltmaya olanak tanır.",
+  "diskCleanerSagerun": "Disk Temizleme Sagerun - Önceden tanımlanmış temizleme seçenekleri ile Disk Temizleme aracını çalıştırır ve geçici dosyaları daha hızlı bir şekilde kaldırır.",
+  "dismTools": "DISM Araçları - DISM komutları ile sisteminizi güncelleyebilir, sağlığını kontrol edebilir, eksik veya bozuk dosyaları onarabilir ve gerekli paketleri ekleyebilirsiniz. Bunlar 'Güncelle', 'Restore Health', 'Get Packages', 'Check Health' ve 'Add Packages' komutlarını içerir.",
+  "mdtTool": "MDT (Windows Bellek Tanı Aracı) - Windows Bellek Tanı Aracını açar ve sisteminizin bellek (RAM) ile ilgili potansiyel sorunlarını tespit etmenize ve tanı koymanıza olanak tanır.",
+  "mrtTool": "MRT (Windows Kötü Amaçlı Yazılım Temizleme Aracı) - Windows Kötü Amaçlı Yazılım Temizleme Aracını açar ve belirli malware tiplerini tarayıp kaldırarak sistem güvenliğini arttırır.",
+  "fileSystemCheck": "Dosya Sistemi Bütünlüğü Kontrolü - Bu komut Sistem Dosya Denetleyicisini çalıştırır ve sistem dosyalarının bütünlüğünü kontrol ederek algıladığı sorunları onarır.",
+  "windowsExperienceIndex": "Windows Deneyim Puanı Değerlendirmesi - Windows Deneyim Puanını başlatarak sisteminizin performansına detaylı bir değerlendirme yapar. Hem donanım hem de yazılım yetenekleriniz hakkında değerli bilgiler sağlar.",
+  "upgradePackages": "Driver Güncelleme ve Uygulama Güncelleme - Chocolatey ve Winget kullanarak tüm yüklü uygulamaları en son özellikler ve güvenlik düzeltmeleri ile günceller.",
+  "checkWinUpdate": "Windows Güncellemelerini Kontrol Et - En son Windows güncellemelerini anında kontrol eder, sisteminize gerekli yamalar ve iyileştirmeler eklenir.",
+  "checkHacked": "Sistemin Hacklenip Hacklenmediğini Kontrol Et - Sisteminizde güvenlik ihlali olup olmadığını doğrular.",
+  "performanceHigh": "Yüksek Performans - 'Güç Seçenekleri' sekmesini açıp yüksek performansı seçin.",
+  "gameMode": "Oyun Modu - 'Oyun Modu Ayarları' sekmesini açın ve 'oyun modu'nu etkinleştirin.",
+  "performanceOptions": "Performans Seçenekleri ve Performans Optimizasyonu - 'Görünüm Ayarları' sekmesini açın ve istediğiniz gibi açıp kapatın. Önerim, GitHub'daki `README.md` dosyasına bakmanızdır.",
+  "systemInfo": "Sistem Bilgisi - Sistem bilgilerini görüntüler.",
+  "initiateFileCleanup": "Dosya Temizliği Başlat - Prefetch, Temp ve %temp% dizinlerindeki dosyalar dahil olmak üzere belirli dosyaları silerek disk alanını boşaltır ve artık ihtiyaç duyulmayan geçici dosyaları kaldırır.",
+  "exitMessage": "Çıkmak İstediğinden Emin Misin?",
+  "exitTitle": "Çıkış Onayı",
+  "chocolateyNotFound": "Chocolatey Yüklü Değil.",
+  "chocolateyInstalled": "Chocolatey Yüklü.",
+  "loadingScreen": {
+    "title": "SASPClean Yükleme Ekranı",
+    "checkingUpdates": "Güncellemeler Kontrol Ediliyor..."
+  },
+  "errorMessages": {
+    "folderNotFound": "Hata: 'icon' Klasörü Bulunamadı.",
+    "fileNotFound": "Hata: 'icon\\SASPClean.png' Dosyası Bulunamadı.",
+    "packageJsonNotFound": "Hata: 'package.json' Dosyası Bulunamadı."
+  },
+  "updateMessages": {
+    "newVersionAvailable": "Yeni Bir Sürüm Mevcut! Yayını Görmek İster Misiniz?",
+    "updateAvailable": "Güncelleme Mevcut",
+    "updateChoice": {
+      "yes": "Evet",
+      "no": "Hayır"
+    }
+  }
 }
