--- a/language/locales/de.json
+++ b/language/locales/de.json
@@ -1,31 +1,71 @@
 {
-  "NodeVersion": "Ihre Node.js-Version ist zu alt. Bitte aktualisieren Sie unter: https://nodejs.org/de",
-  "InvalidStatusCode": "Ungültige Antwort. Statuscode:",
+  "NodeVersion": "Ihre Node.js-Version ist zu alt. Bitte aktualisieren Sie: https://nodejs.org/en",
+  "InvalidStatusCode": "Ungültiger Antwortcode:",
   "LatestVersion": "Neueste Version:",
-  "OutOfDate": "Das Projekt ist veraltet.",
-  "UptoDate": "Das Projekt ist auf dem neuesten Stand.",
-  "GithubApiError": "GitHub API-Fehler:",
-  "HttpGetError": "HTTP GET-Fehler:",
+  "OutOfDate": "Projekt ist veraltet.",
+  "UptoDate": "Projekt ist aktuell.",
+  "GithubApiError": "GitHub API Fehler:",
+  "HttpGetError": "HTTP GET Fehler:",
   "Error": "Fehler:",
-  "CommandError:": "Befehlsfehler:",
-  "MissingUsername": "Standardordner fehlen, weil der Benutzername nicht festgelegt ist.",
+  "CommandError": "Befehlsfehler:",
+  "MissingUsername": "Benutzername nicht gesetzt, daher fehlen Standardordner.",
   "ErrorFolder": "Fehler beim Abrufen der Standardordner.",
-  "ErrorUsername": "Das Abrufen des Benutzernamens über den Echo-Befehl ist fehlgeschlagen.",
+  "ErrorUsername": "Fehler beim Abrufen des Benutzernamens mit dem Echo-Befehl.",
   "ErrorUsernameSimple": "Fehler beim Abrufen des Benutzernamens:",
   "FolderDoesNotExist": "Ordner existiert nicht: ${folderPath}",
   "FileDoesNotExist": "Datei existiert nicht: ${filePath}",
-  "FilesIn": "Dateien in ${folderPath}:",
+  "FilesIn": "Dateien in ${folderPath}",
   "FilesDeletedSuccesfully": "Datei erfolgreich gelöscht: ${filePath}",
-  "OpenedSuccessfully": "${toolDisplayName} wurde erfolgreich geöffnet.",
-  "ErrorOpening": "Es konnte keine Verbindung zu ${toolDisplayName} hergestellt werden.",
+  "OpenedSuccessfully": "${toolDisplayName} erfolgreich geöffnet.",
+  "ErrorOpening": "${toolDisplayName} konnte nicht geöffnet werden.",
   "FileCreatedAndContentWritten": "Datei erstellt und Inhalt geschrieben: ${filePath}",
   "AnErrorOccurred": "Ein Fehler ist aufgetreten:",
   "ErrorWhileOpeningTools": "Fehler beim Öffnen der Werkzeuge:",
-  "DeletingFilesInFolder": "Lösche Dateien in ${folder}:",
-  "ThereAreNoFilesIn": "In ${folder} gibt es keine Dateien zum Löschen",
-  "ErrorHandlingFolder": "Fehler beim Bearbeiten des Ordners ${folder}:",
-  "InformationLog": "Aus der Datei ${files}: ${totalFilesDeleted} Dateien gefunden, ${successfulDeletions} Dateien gelöscht, ${unsuccessfulDeletions} Dateien nicht gelöscht.",
-  "SpotifyInformation": "Sie können in die Spotify-Anwendung gehen, zum Abschnitt \"Einstellungen\" gehen und es über die Option \"Cache löschen\" löschen. Sie können auch \"Downloads\" im gleichen Abschnitt löschen.",
+  "DeletingFilesInFolder": "Löschen von Dateien im Ordner ${folder}",
+  "ThereAreNoFilesIn": "Es gibt keine zu löschenden Dateien im Ordner ${folder}.",
+  "ErrorHandlingFolder": "Fehler beim Verarbeiten des Ordners ${folder}:",
+  "InformationLog": "${files} Dateien von: ${totalFilesDeleted} Dateien erkannt, ${successfulDeletions} Dateien wurden gelöscht, ${unsuccessfulDeletions} Dateien konnten nicht gelöscht werden.",
+  "SpotifyInformation": "Gehen Sie in die Spotify-App, öffnen Sie die 'Einstellungen' und wählen Sie 'Cache leeren'. Sie können auch 'Heruntergeladene' Daten löschen.",
   "Version": "Ihre Version: V${version} | Neueste Version: ${latestVersion}",
-  "Links": "Links:"
+  "Links": "Links:",
+  "formTitle": "SASPClean",
+  "runButton": "Ausführen",
+  "checkDisk": "Festplatte überprüfen - Dieser Befehl prüft die Festplatte auf Fehler und behebt automatisch gefundene Probleme.",
+  "clearWindowsUpdate": "Windows-Updates bereinigen - Dieser Befehl hilft, unnötige Dateien zu entfernen und das Windows-Komponenten-Repository zu optimieren, um Speicherplatz zu sparen.",
+  "diskCleaner": "Festplattenbereiniger - Öffnet das interne Festplattenbereinigungswerkzeug, um unnötige Dateien zu entfernen und Speicherplatz freizugeben.",
+  "diskCleanerSagerun": "Festplattenbereinigung Sagerun - Führt das Festplattenbereinigungswerkzeug mit vordefinierten Bereinigungseinstellungen aus und entfernt temporäre Dateien schneller.",
+  "dismTools": "DISM-Werkzeuge - Mit DISM-Befehlen können Sie Ihr System aktualisieren, dessen Gesundheit prüfen, fehlende oder beschädigte Dateien reparieren und erforderliche Pakete hinzufügen. Diese beinhalten die Befehle 'Update', 'Restore Health', 'Get Packages', 'Check Health' und 'Add Packages'.",
+  "mdtTool": "MDT (Windows Speicherdiagnosetool) - Öffnet das Windows Speicherdiagnosetool, um potenzielle Probleme mit dem Arbeitsspeicher (RAM) zu identifizieren und zu diagnostizieren.",
+  "mrtTool": "MRT (Windows Malware-Entfernungswerkzeug) - Öffnet das Windows Malware-Entfernungswerkzeug, um bestimmte Malware-Typen zu scannen und zu entfernen und die Systemsicherheit zu verbessern.",
+  "fileSystemCheck": "Dateisystemintegritätsprüfung - Dieser Befehl führt den Systemdatei-Überprüfer aus und repariert erkannte Probleme mit Systemdateien.",
+  "windowsExperienceIndex": "Windows-Erfahrungsindex - Startet die Windows-Leistungsbewertung und bietet eine detaillierte Bewertung der Systemleistung. Liefert wertvolle Informationen über Hardware- und Softwarefähigkeiten.",
+  "upgradePackages": "Treiber- und Anwendungsaktualisierung - Aktualisiert alle installierten Anwendungen auf die neuesten Funktionen und Sicherheitsupdates mit Chocolatey und Winget.",
+  "checkWinUpdate": "Windows-Updates überprüfen - Überprüft sofort auf die neuesten Windows-Updates und fügt notwendige Patches und Verbesserungen hinzu.",
+  "checkHacked": "Prüfen, ob das System gehackt wurde - Überprüft, ob Sicherheitsverletzungen in Ihrem System vorliegen.",
+  "performanceHigh": "Hohe Leistung - Öffnet die 'Energieoptionen' und wählt den Hochleistungsmodus.",
+  "gameMode": "Spielmodus - Öffnet die 'Spielmodus-Einstellungen' und aktiviert den Spielmodus.",
+  "performanceOptions": "Leistungsoptionen und Leistungsoptimierung - Öffnet die 'Darstellungseinstellungen' und erlaubt das Ein- und Ausschalten nach Belieben. Es wird empfohlen, die 'README.md'-Datei auf GitHub zu konsultieren.",
+  "systemInfo": "Systeminformationen - Zeigt Systeminformationen an.",
+  "initiateFileCleanup": "Dateibereinigung starten - Löscht bestimmte Dateien aus den Prefetch-, Temp- und %temp%-Verzeichnissen, um Speicherplatz freizugeben und nicht mehr benötigte temporäre Dateien zu entfernen.",
+  "exitMessage": "Sind Sie sicher, dass Sie das Programm beenden möchten?",
+  "exitTitle": "Beendigungsbestätigung",
+  "chocolateyNotFound": "Chocolatey nicht installiert.",
+  "chocolateyInstalled": "Chocolatey installiert.",
+  "loadingScreen": {
+    "title": "SASPClean Ladebildschirm",
+    "checkingUpdates": "Überprüfe Updates..."
+  },
+  "errorMessages": {
+    "folderNotFound": "Fehler: Ordner 'icon' nicht gefunden.",
+    "fileNotFound": "Fehler: Datei 'icon\\SASPClean.png' nicht gefunden.",
+    "packageJsonNotFound": "Fehler: Datei 'package.json' nicht gefunden."
+  },
+  "updateMessages": {
+    "newVersionAvailable": "Eine neue Version ist verfügbar! Möchten Sie den Release ansehen?",
+    "updateAvailable": "Update verfügbar",
+    "updateChoice": {
+      "yes": "Ja",
+      "no": "Nein"
+    }
+  }
 }
