--- a/language/locales/en.json
+++ b/language/locales/en.json
@@ -1,71 +1,71 @@
 {
-  "NodeVersion": "Node.js sürümünüz çok eski. Lütfen güncelleyin: https://nodejs.org/en",
-  "InvalidStatusCode": "Geçersiz yanıt. Durum kodu:",
-  "LatestVersion": "En son sürüm:",
-  "OutOfDate": "Proje güncel değil.",
-  "UptoDate": "Proje güncel.",
-  "GithubApiError": "GitHub API hatası:",
-  "HttpGetError": "HTTP GET hatası:",
-  "Error": "Hata:",
-  "CommandError": "Komut hatası:",
-  "MissingUsername": "Kullanıcı adı ayarlanmadığı için varsayılan klasörler eksik.",
-  "ErrorFolder": "Varsayılan klasörler getirilirken hata oluştu.",
-  "ErrorUsername": "Kullanıcı adını almak için kullanılan echo komutu başarısız oldu.",
-  "ErrorUsernameSimple": "Kullanıcı adı alınırken hata oluştu:",
-  "FolderDoesNotExist": "Klasör mevcut değil: ${folderPath}",
-  "FileDoesNotExist": "Dosya mevcut değil: ${filePath}",
-  "FilesIn": "${folderPath} içindeki dosyalar",
-  "FilesDeletedSuccesfully": "Dosya başarıyla silindi: ${filePath}",
-  "OpenedSuccessfully": "${toolDisplayName} başarıyla açıldı.",
-  "ErrorOpening": "${toolDisplayName} açılmıyor.",
-  "FileCreatedAndContentWritten": "Dosya oluşturuldu ve içerik yazıldı: ${filePath}",
-  "AnErrorOccurred": "Bir hata oluştu:",
-  "ErrorWhileOpeningTools": "Araçlar açılırken hata oluştu:",
-  "DeletingFilesInFolder": "${folder} içindeki dosyaları silme",
-  "ThereAreNoFilesIn": "${folder} içinde silinecek dosya yok.",
-  "ErrorHandlingFolder": "Hata ${folder} klasörünü işlerken oluştu:",
-  "InformationLog": "${files} Dosyadan: ${totalFilesDeleted} dosyaları tespit edildi, ${successfulDeletions} dosya silindi, ${unsuccessfulDeletions} dosya silinemedi.",
-  "SpotifyInformation": "Spotify uygulamasına girip \"Ayarlar\" bölümüne gidip \"Önbelleği Temizle\" seçeneğinden temizleyebilirsiniz, aynı bölümden \"İndirilenler\"i de silebilirsiniz",
-  "Version": "Senin versiyonun: V${version} | En son versiyon: ${latestVersion}",
-  "Links": "Linkler;",
+  "NodeVersion": "Your Node.js version is outdated. Please update it: https://nodejs.org/en",
+  "InvalidStatusCode": "Invalid response. Status code:",
+  "LatestVersion": "Latest version:",
+  "OutOfDate": "The project is not up to date.",
+  "UptoDate": "The project is up to date.",
+  "GithubApiError": "GitHub API error:",
+  "HttpGetError": "HTTP GET error:",
+  "Error": "Error:",
+  "CommandError": "Command error:",
+  "MissingUsername": "Default folders are missing because the username is not set.",
+  "ErrorFolder": "An error occurred while retrieving default folders.",
+  "ErrorUsername": "The echo command used to retrieve the username failed.",
+  "ErrorUsernameSimple": "An error occurred while retrieving the username:",
+  "FolderDoesNotExist": "Folder does not exist: ${folderPath}",
+  "FileDoesNotExist": "File does not exist: ${filePath}",
+  "FilesIn": "Files in ${folderPath}",
+  "FilesDeletedSuccesfully": "File deleted successfully: ${filePath}",
+  "OpenedSuccessfully": "${toolDisplayName} opened successfully.",
+  "ErrorOpening": "${toolDisplayName} cannot be opened.",
+  "FileCreatedAndContentWritten": "File created and content written: ${filePath}",
+  "AnErrorOccurred": "An error occurred:",
+  "ErrorWhileOpeningTools": "An error occurred while opening tools:",
+  "DeletingFilesInFolder": "Deleting files in ${folder}",
+  "ThereAreNoFilesIn": "There are no files to delete in ${folder}.",
+  "ErrorHandlingFolder": "Error occurred while handling the ${folder} folder:",
+  "InformationLog": "From ${files} files in: ${totalFilesDeleted} files were detected, ${successfulDeletions} files were deleted, ${unsuccessfulDeletions} files could not be deleted.",
+  "SpotifyInformation": "In the Spotify app, go to the \"Settings\" section and use the \"Clear Cache\" option. You can also delete \"Downloads\" from the same section.",
+  "Version": "Your version: V${version} | Latest version: ${latestVersion}",
+  "Links": "Links;",
   "formTitle": "SASPClean",
-  "runButton": "Çalıştır",
-  "checkDisk": "Diski Kontrol Et - Bu komut diski hatalar için inceler ve bulduğu sorunları otomatik olarak giderir ve onarır.",
-  "clearWindowsUpdate": "Windows Güncellemelerini Temizle - Bu komut gereksiz dosyaları kaldırmak ve Windows bileşen deposunu optimize etmek için tasarlanmıştır, sistemde depolama alanını boşaltmaya yardımcı olur.",
-  "diskCleaner": "Disk Temizleyici - Dahili Disk Temizleme aracını açar ve gereksiz dosyaları kaldırarak disk alanını boşaltmaya olanak tanır.",
-  "diskCleanerSagerun": "Disk Temizleme Sagerun - Önceden tanımlanmış temizleme seçenekleri ile Disk Temizleme aracını çalıştırır ve geçici dosyaları daha hızlı bir şekilde kaldırır.",
-  "dismTools": "DISM Araçları - DISM komutları ile sisteminizi güncelleyebilir, sağlığını kontrol edebilir, eksik veya bozuk dosyaları onarabilir ve gerekli paketleri ekleyebilirsiniz. Bunlar 'Güncelle', 'Restore Health', 'Get Packages', 'Check Health' ve 'Add Packages' komutlarını içerir.",
-  "mdtTool": "MDT (Windows Bellek Tanı Aracı) - Windows Bellek Tanı Aracını açar ve sisteminizin bellek (RAM) ile ilgili potansiyel sorunlarını tespit etmenize ve tanı koymanıza olanak tanır.",
-  "mrtTool": "MRT (Windows Kötü Amaçlı Yazılım Temizleme Aracı) - Windows Kötü Amaçlı Yazılım Temizleme Aracını açar ve belirli malware tiplerini tarayıp kaldırarak sistem güvenliğini arttırır.",
-  "fileSystemCheck": "Dosya Sistemi Bütünlüğü Kontrolü - Bu komut Sistem Dosya Denetleyicisini çalıştırır ve sistem dosyalarının bütünlüğünü kontrol ederek algıladığı sorunları onarır.",
-  "windowsExperienceIndex": "Windows Deneyim Puanı Değerlendirmesi - Windows Deneyim Puanını başlatarak sisteminizin performansına detaylı bir değerlendirme yapar. Hem donanım hem de yazılım yetenekleriniz hakkında değerli bilgiler sağlar.",
-  "upgradePackages": "Driver Güncelleme ve Uygulama Güncelleme - Chocolatey ve Winget kullanarak tüm yüklü uygulamaları en son özellikler ve güvenlik düzeltmeleri ile günceller.",
-  "checkWinUpdate": "Windows Güncellemelerini Kontrol Et - En son Windows güncellemelerini anında kontrol eder, sisteminize gerekli yamalar ve iyileştirmeler eklenir.",
-  "checkHacked": "Sistemin Hacklenip Hacklenmediğini Kontrol Et - Sisteminizde güvenlik ihlali olup olmadığını doğrular.",
-  "performanceHigh": "Yüksek Performans - 'Güç Seçenekleri' sekmesini açıp yüksek performansı seçin.",
-  "gameMode": "Oyun Modu - 'Oyun Modu Ayarları' sekmesini açın ve 'oyun modu'nu etkinleştirin.",
-  "performanceOptions": "Performans Seçenekleri ve Performans Optimizasyonu - 'Görünüm Ayarları' sekmesini açın ve istediğiniz gibi açıp kapatın. Önerim, GitHub'daki `README.md` dosyasına bakmanızdır.",
-  "systemInfo": "Sistem Bilgisi - Sistem bilgilerini görüntüler.",
-  "initiateFileCleanup": "Dosya Temizliği Başlat - Prefetch, Temp ve %temp% dizinlerindeki dosyalar dahil olmak üzere belirli dosyaları silerek disk alanını boşaltır ve artık ihtiyaç duyulmayan geçici dosyaları kaldırır.",
-  "exitMessage": "Çıkmak İstediğinden Emin Misin?",
-  "exitTitle": "Çıkış Onayı",
-  "chocolateyNotFound": "Chocolatey Yüklü Değil.",
-  "chocolateyInstalled": "Chocolatey Yüklü.",
+  "runButton": "Run",
+  "checkDisk": "Check Disk - This command examines the disk for errors and automatically addresses and repairs any issues it discovers.",
+  "clearWindowsUpdate": "Clear Windows Update - This command removes unnecessary files and optimizes the Windows component store, helping to free up storage space.",
+  "diskCleaner": "Disk Cleaner - Opens the built-in Disk Cleanup utility, allowing removal of unnecessary files to free up disk space.",
+  "diskCleanerSagerun": "Disk Cleaner Sagerun - Executes the Disk Cleanup utility with predefined cleanup options, streamlining the removal of temporary files.",
+  "dismTools": "DISM Tools - With DISM commands, you can update your system, check its health, repair missing or corrupted files, and add necessary packages. These include the 'Update', 'Restore Health', 'Get Packages', 'Check Health', and 'Add Packages' commands.",
+  "mdtTool": "MDT (Windows Memory Diagnostic Tool) - Opens the Windows Memory Diagnostic Tool, allowing you to assess and diagnose potential issues related to your system's memory (RAM).",
+  "mrtTool": "MRT (Windows Malicious Software Removal Tool) - Opens the Windows Malicious Software Removal Tool, scanning and removing specific types of malware to enhance system security.",
+  "fileSystemCheck": "File System Integrity Check - This command runs the System File Checker, ensuring the integrity of system files by scanning and repairing any detected problems.",
+  "windowsExperienceIndex": "Windows Experience Index Formal Assessment - Initiates a detailed evaluation of your system's performance through the Windows Experience Index. It provides valuable insights into the capabilities of both your hardware and software.",
+  "upgradePackages": "Driver and Application Updates - Uses Chocolatey and Winget to update all installed apps with the latest features and security fixes.",
+  "checkWinUpdate": "Check Windows Update - Looks for the latest Windows updates right away, ensuring your system is current with essential patches and improvements.",
+  "checkHacked": "Check if You Have Been Hacked - Verifies possible security breaches on your system.",
+  "performanceHigh": "High Performance - Open the 'Power Options' tab and select high performance.",
+  "gameMode": "Game Mode - Open the 'Game Mode Settings' tab and enable 'game mode.'",
+  "performanceOptions": "Performance Options and Optimization - Open the 'View Settings' tab and turn it on or off as desired. I recommend checking the `README.md` file on GitHub.",
+  "systemInfo": "System Information - Displays system information.",
+  "initiateFileCleanup": "Initiate File Cleanup - Deletes specific files, including those in the Prefetch, Temp, and %temp% directories, freeing up disk space and removing temporary files that are no longer needed.",
+  "exitMessage": "Are you sure you want to exit?",
+  "exitTitle": "Exit Confirmation",
+  "chocolateyNotFound": "Chocolatey is not installed.",
+  "chocolateyInstalled": "Chocolatey is installed.",
   "loadingScreen": {
-    "title": "SASPClean Yükleme Ekranı",
-    "checkingUpdates": "Güncellemeler Kontrol Ediliyor..."
+    "title": "SASPClean Loading Screen",
+    "checkingUpdates": "Checking for updates..."
   },
   "errorMessages": {
-    "folderNotFound": "Hata: 'icon' Klasörü Bulunamadı.",
-    "fileNotFound": "Hata: 'icon\\SASPClean.png' Dosyası Bulunamadı.",
-    "packageJsonNotFound": "Hata: 'package.json' Dosyası Bulunamadı."
+    "folderNotFound": "Error: 'icon' folder not found.",
+    "fileNotFound": "Error: 'icon\\SASPClean.png' file not found.",
+    "packageJsonNotFound": "Error: 'package.json' file not found."
   },
   "updateMessages": {
-    "newVersionAvailable": "Yeni Bir Sürüm Mevcut! Yayını Görmek İster Misiniz?",
-    "updateAvailable": "Güncelleme Mevcut",
+    "newVersionAvailable": "A new version is available! Would you like to see the release?",
+    "updateAvailable": "Update available",
     "updateChoice": {
-      "yes": "Evet",
-      "no": "Hayır"
+      "yes": "Yes",
+      "no": "No"
     }
   }
 }
